--- a/JobPosts-React/index.html
+++ b/JobPosts-React/index.html
@@ -12,7 +12,7 @@
     <title>Vite + React</title>
   </head>
   <body style="background-color: rgb(249,249,249);">
-    <div id="root" style="padding: 0;margin: auto; width: 60vw;"></div>
+    <div id="root" style="padding: 0;margin: auto; width: 100%; padding: 0;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
